Update `Selection Services Prompt` && use `Extra selection prompts` for query descomposer.

--- a/src/fastchat/app/services/llm/prompts/texts/system_prompts.yaml
+++ b/src/fastchat/app/services/llm/prompts/texts/system_prompts.yaml
@@ -105,7 +105,7 @@ select_prompts: |
   Correctly select and extract both the prompt_services and the arguments from the input JSON.
 
 select_service: |
-  You are an expert in data comprehension with access to various services. You receive a user query and a JSON containing information about all available services in the format {key1: data1, key2: data2, ...}, where each value contains the necessary information about the service (name, description, and arguments).
+  You are an expert in data comprehension with access to various services. You receive a user query and have a JSON containing information about all available services in the format {key1: data1, key2: data2, ...}, where each value contains the necessary information about the service (name, description, and arguments).
 
   Your task is:
   1. Identify if the user's query requests to use any service.
@@ -115,7 +115,8 @@ select_service: |
   2. ALWAYS return a JSON in the following format:
   {"service":"service_key", "args":{...}}
 
-  Correctly select and extract both the service and the arguments from the input JSON.
+  Correctly select and extract both the service and the arguments from the input JSON. Below are all the services you have available:\n
+  
 chat_assistant_prompt: |
   You are an advanced conversational assistant whose main function is to interact with users and respond exclusively based on their query and the information available in the system context.
 
